new shipment service site

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -378,7 +378,7 @@ de:
           </p>
           <p>Bestellungen von Produkten mit alkoholischem Gehalt seitens minderjähriger Verbraucher werden nicht angenommen.
           </p>
-          <p><b>5.2 </b>Der Versand erfolgt von Montag bis Freitag (ausgenommen von Samstag, Sonn-und Feiertagen) an den Wohnsitz des Empfängers und in der auf Website zum Zeitpunkt des Angebots angegebenen Weise. Der erste Zustellungsversuch erfolgt bei Bestellungen innerhalb Italiens in der Regel innerhalb von 4 bis 5 Werktagen. Die Lieferzeiten variieren abhängig von Ausgangs- und Bestimmungsort und können auf der Internetseite <a href="http://www.sda.it">www.sda.it</a> eingesehen werden oder über die Servicenummer 199-116699 in Erfahrung gebracht werden.
+          <p><b>5.2 </b>Der Versand erfolgt von Montag bis Freitag (ausgenommen von Samstag, Sonn-und Feiertagen) an den Wohnsitz des Empfängers und in der auf Website zum Zeitpunkt des Angebots angegebenen Weise. Der erste Zustellungsversuch erfolgt bei Bestellungen innerhalb Italiens in der Regel innerhalb von 4 bis 5 Werktagen. Die Lieferzeiten variieren abhängig von Ausgangs- und Bestimmungsort und können auf der Internetseite <a href="http://www.omest.com">www.omest.com</a> eingesehen werden oder über die Servicenummer 199-116699 in Erfahrung gebracht werden.
           </p>
           <p>Falls dem Verkäufer die Übergabe an das Beförderungsunternehmen innerhalb der genannten Frist nicht möglich ist, setzt er den Verbraucher hiervon umgehend per E-Mail in Kenntnis. An Feiertagen (z.B. Weihnachten, Ostern oder am 15. August) kann es zu einer Verzögerung der Lieferungen kommen, welche in jedem Fall innerhalb eines Zeitraums von maximal 14 Tagen erfolgen.
           </p>
