--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -369,7 +369,7 @@ it:
           </p><p>
           Non saranno accettati ordini di prodotti a contenuto alcolico provenienti da consumatori minorenni.
           </p><p>
-          <strong>5.2 </strong>La consegna viene effettuata in giornata dal giorno lunedì fino giorno venerdì (escluso sabato e festivi) al domicilio del destinatario e con le modalità indicate sul sito web al momento dell’offerta del bene. Il primo tentativo di consegna viene effettuato indicativamente in 4/5 giorni lavorativi nella maggior parte delle località italiane. I tempi di consegna variano in funzione della località di partenza e di arrivo della spedizione verificabili sul sito internet <a href="http://www.sda.it">www.sda.it</a> e/o al numero unico 199-116699.
+          <strong>5.2 </strong>La consegna viene effettuata in giornata dal giorno lunedì fino giorno venerdì (escluso sabato e festivi) al domicilio del destinatario e con le modalità indicate sul sito web al momento dell’offerta del bene. Il primo tentativo di consegna viene effettuato indicativamente in 4/5 giorni lavorativi nella maggior parte delle località italiane. I tempi di consegna variano in funzione della località di partenza e di arrivo della spedizione verificabili sul sito internet <a href="http://www.omest.com">www.omest.com</a> e/o al numero unico 199-116699.
           </p><p>
           Nel caso in cui il Venditore non sia in grado di effettuare la consegna al vettore entro detto termine, ne darà tempestivo avviso tramite e-mail al consumatore. Nei periodi festivi (esempio Natale, Pasqua o Ferragosto) sono possibili ritardi nella consegna dei beni, la quale in ogni caso avverrà entro il limite di 14 (quattordici) giorni.
           </p><p>
