--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -9,7 +9,7 @@ de:
     sales_conditions: verkaufsbedingungen
   spree:
     item_total_with_vat: Artikel gesamt MwSt. inklusiv
-    packaging_christmas: Confezione spedizione Birra di Natale
+    packaging_christmas: Besondere Weihnachtsbier-Verpackung
     order_mutex_error: Order Mutex error
     locale_en: EN
     locale_it: IT
