no more sent email

--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -528,6 +528,8 @@ it:
           paid: Pagato
           balance_due: Pagamento PayPal in attesa
           pending: In attesa
+    api:
+      must_specify_api_key: "Api key necessaria"
 
 # IT translation waiting for updates on solidus_i18n
 # Frontend
